--- a/MapBox/MapBox.iOS/MapBox.iOS.csproj
+++ b/MapBox/MapBox.iOS/MapBox.iOS.csproj
@@ -93,6 +93,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MapBoxRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -127,7 +128,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MapBox\MapBox.csproj">
-      <Project>{DBB9E4EF-8653-462B-8DE8-269BBCC19416}</Project>
+      <Project>{9893D8D6-8751-47FD-B31E-9B7222F0E6D7}</Project>
       <Name>MapBox</Name>
     </ProjectReference>
   </ItemGroup>
